# TimeDataModel

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  conf.py  index.md  installation.md  overview.md  usage.md
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  overview.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: index.doctree  installation.doctree  overview.doctree  usage.doctree
docs/_build/html/.doctrees/_build/html/tutorials/: cubes_and_collections.doctree  data_quality_and_coverage.doctree  geographical_support.doctree  getting_started.doctree  hierarchical_timeseries.doctree  io_and_interoperability.doctree  multivariate_timeseries.doctree  numpy_and_pandas_transforms.doctree  timeseries_operations.doctree  unit_handling_and_validation.doctree
docs/_build/html/.doctrees/nbsphinx/_build/html/tutorials/: getting_started.ipynb  io_and_interoperability.ipynb  timeseries_operations.ipynb  unit_handling_and_validation.ipynb
docs/_build/html/.doctrees/nbsphinx/tutorials/: arrays_and_collections.ipynb  cubes_and_collections.ipynb  data_quality_and_coverage.ipynb  geographical_support.ipynb  getting_started.ipynb  hierarchical_timeseries.ipynb  io_and_interoperability.ipynb  multivariate_timeseries.ipynb  scratch_repr_test.ipynb  timeseries_operations.ipynb  unit_handling_and_validation.ipynb
docs/_build/html/.doctrees/tutorials/: arrays_and_collections.doctree  cubes_and_collections.doctree  data_quality_and_coverage.doctree  geographical_support.doctree  getting_started.doctree  hierarchical_timeseries.doctree  index.doctree  io_and_interoperability.doctree  multivariate_timeseries.doctree  numpy_and_pandas_transforms.doctree  scratch_repr_test.doctree  timeseries_operations.doctree  unit_handling_and_validation.doctree
docs/_build/html/_build/html/.doctrees/nbsphinx/tutorials/: cubes_and_collections.html  cubes_and_collections.ipynb  data_quality_and_coverage.html  geographical_support.html  (+10 more)
docs/_build/html/_build/html/tutorials/: cubes_and_collections.html  data_quality_and_coverage.html  data_quality_and_coverage.ipynb  geographical_support.html  getting_started.html  hierarchical_timeseries.html  hierarchical_timeseries.ipynb  io_and_interoperability.html  multivariate_timeseries.html  numpy_and_pandas_transforms.html  timeseries_operations.html  unit_handling_and_validation.html  unit_handling_and_validation.ipynb
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/timedatamodel/: _repr.html  array.html  collection.html  coverage.html  cube.html  datapoint.html  enums.html  hierarchy.html  location.html  table.html  timeseries.html
docs/_build/html/_sources/: api.md.txt  index.md.txt  installation.md.txt  usage.md.txt
docs/_build/html/_sources/_build/html/tutorials/: hierarchical_timeseries.ipynb.txt  multivariate_timeseries.ipynb.txt
docs/_build/html/_sources/tutorials/: arrays_and_collections.ipynb.txt  data_quality_and_coverage.ipynb.txt  geographical_support.ipynb.txt  getting_started.ipynb.txt  hierarchical_timeseries.ipynb.txt  index.md.txt  io_and_interoperability.ipynb.txt  multivariate_timeseries.ipynb.txt  numpy_and_pandas_transforms.ipynb.txt  scratch_repr_test.ipynb.txt  timeseries_operations.ipynb.txt  unit_handling_and_validation.ipynb.txt
docs/_build/html/_static/: custom.css
docs/_build/html/tutorials/: arrays_and_collections.html  cubes_and_collections.html  data_quality_and_coverage.html  geographical_support.html  getting_started.html  hierarchical_timeseries.html  index.html  io_and_interoperability.html  io_and_interoperability.ipynb  multivariate_timeseries.html  numpy_and_pandas_transforms.html  numpy_and_pandas_transforms.ipynb  scratch_repr_test.html  timeseries_operations.html  timeseries_operations.ipynb  unit_handling_and_validation.html
docs/examples/: index.md  timeseries.ipynb  timeseriestable.ipynb
docs/tutorials/: cubes_and_collections.ipynb  index.md  timeseries_operations.ipynb
examples/: coverage_bar_demo.py  example.ipynb  nb_01_getting_started.ipynb  nb_01_timeseries.ipynb  nb_01_timeseries_polars.ipynb  nb_02_numpy_and_pandas_transforms.ipynb  nb_02_timeseries_operations.ipynb  nb_02_timeseries_table_polars.ipynb  nb_02_timeseriestable.ipynb  nb_03_timeseries_operations.ipynb  nb_03_unit_handling_and_validation.ipynb  nb_04_multivariate_timeseries.ipynb  nb_04_timeseries_operations.ipynb  nb_05_cubes_and_collections.ipynb  nb_05_multivariate_timeseries.ipynb  nb_05_timeseries_table_polars.ipynb  nb_06_arrays_and_collections.ipynb  nb_06_cubes_and_collections.ipynb  nb_06_data_quality_and_coverage.ipynb  nb_06_io_and_interoperability.ipynb  nb_07_data_quality_and_coverage.ipynb  nb_07_io_and_interoperability.ipynb  nb_08_geographical_support.ipynb  nb_08_geospatial_timeseries.ipynb  nb_08_io_and_interoperability.ipynb  nb_09_geographical_support.ipynb  nb_09_hierarchical_timeseries.ipynb  nb_10_hierarchical_timeseries.ipynb  nb_11_timeseries_arrow.ipynb  nb_11_timeseries_polars.ipynb  quickstart.ipynb  scratch_repr_test.ipynb  timeseries_showcase.ipynb  univariate_multivariate_timeseries.ipynb
tests/: conftest.py  test_array.py  test_backend.py  test_cube.py  test_datapoint.py  test_enums.py  test_geospatial.py  test_hierarchy.py  test_location.py  test_metadata.py  test_resolution.py  test_theme.py  test_timeseries.py  test_timeseries_numpy.py  test_timeseries_polars.py  test_timeseriesdescriptor.py  test_timeseriestable.py  test_timeseriestable_polars.py  test_units.py
timedatamodel/: __init__.py  _base.py  _converters.py  _io.py  _ops.py  _repr.py  _theme.py  _ts_utils.py  array.py  collection.py  coverage.py  cube.py  datapoint.py  datashape.py  enums.py  hierarchy.py  location.py  metadata.py  resolution.py  table.py  theme.json  timeseries.py  timeseries_arrow.py  timeseries_numpy.py  timeseries_pandas.py  timeseries_polars.py  timeseriesdescriptor.py  timeseriestable.py  timeseriestable_polars.py  units.py
(+18 files in other folders)
