[project]
name = "timedatamodel"
version = "0.1.1"
description = "A lightweight data model for time series data with pandas, numpy, and polars support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rebase Energy", email = "sebastian@rebase.energy" }
]
keywords = ["time series", "data model", "pandas", "polars", "energy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = ["numpy>=2.0"]

[project.urls]
Homepage = "https://github.com/rebase-energy/TimeDataModel"
Repository = "https://github.com/rebase-energy/TimeDataModel"
Issues = "https://github.com/rebase-energy/TimeDataModel/issues"

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
pint = ["pint>=0.24"]
geo = ["shapely>=2.0"]
polars = ["polars>=1.0"]
all = ["pandas>=2.0", "pint>=0.24", "shapely>=2.0", "polars>=1.0"]
dev = ["pytest>=8.0", "pandas>=2.0", "pint>=0.24", "shapely>=2.0", "polars>=1.0"]
docs = [
    "sphinx>=7.4",
    "myst-parser>=3.0",
    "furo>=2024.01.29",
    "sphinx-autodoc-typehints>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
