[project]
name = "timedatamodel"
version = "0.1.4"
description = "A lightweight data model for time series data with pandas, numpy, and polars support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rebase Energy", email = "sebastian@rebase.energy" }
]
keywords = ["time series", "data model", "pandas", "polars", "energy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
    "xarray>=2026.2.0",
]

[project.urls]
Homepage = "https://github.com/rebase-energy/TimeDataModel"
Repository = "https://github.com/rebase-energy/TimeDataModel"
Issues = "https://github.com/rebase-energy/TimeDataModel/issues"

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
pint = ["pint>=0.24"]
geo = ["shapely>=2.0"]
polars = ["polars>=1.0"]
pyarrow = ["pyarrow>=14.0"]
all = ["pandas>=2.0", "pint>=0.24", "shapely>=2.0", "polars>=1.0", "pyarrow>=14.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pint>=0.24",
    "shapely>=2.0",
    "polars>=1.0",
]
docs = [
    "sphinx>=7.4",
    "myst-parser>=3.0",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=2.3",
    "nbsphinx>=0.9",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (circular import workarounds)
    "F821",   # undefined name (quoted forward references)
    "UP007",  # use X | Y for union types (NamedTuple compat)
    "UP017",  # use datetime.UTC alias (keep timezone.utc for broader compat)
    "UP035",  # import from collections.abc (keep typing imports)
    "UP037",  # remove quotes from type annotation (forward references)
    "B007",   # unused loop variable (intentional unpacking)
    "B905",   # zip() without strict= (Python 3.10+ style, keep compat)
    "SIM105", # contextlib.suppress (explicit try/except preferred for clarity)
    "SIM108", # ternary operator (readability preference)
    "SIM114", # combine if branches (readability preference)
    "TC001",  # move import into TYPE_CHECKING (circular import issues)
    "TC002",  # move third-party import into TYPE_CHECKING
    "TC003",  # move stdlib import into TYPE_CHECKING (keep simple)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B015", "B018", "F841", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["timedatamodel"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["timedatamodel"]

[tool.coverage.report]
show_missing = true
skip_empty = true
