[project]
name = "timedatamodel"
version = "0.2.1"
description = "A lightweight data model for time series data with pandas, numpy, and polars support"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Rebase Energy", email = "sebastian@rebase.energy" }
]
keywords = ["time series", "data model", "pandas", "numpy", "polars", "energy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "polars>=1.0",
]

[project.urls]
Homepage = "https://github.com/rebase-energy/TimeDataModel"
Repository = "https://github.com/rebase-energy/TimeDataModel"
Issues = "https://github.com/rebase-energy/TimeDataModel/issues"

[project.optional-dependencies]
pandas = ["pandas>=2.0", "pyarrow>=14.0"]
pint = ["pint>=0.24"]
geo = ["shapely>=2.0"]
all = ["pandas>=2.0", "pyarrow>=14.0", "pint>=0.24", "shapely>=2.0", "numpy>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pint>=0.24",
    "shapely>=2.0",
    "numpy>=1.24",
    "polars>=1.0",
]
docs = [
    "sphinx>=7.4",
    "myst-parser>=3.0",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=2.3",
    "nbsphinx>=0.9",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["timedatamodel"]

[tool.coverage.report]
show_missing = true
skip_empty = true
